Submission draft upload

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* UT Austin Bootcamp 
 Refactor Author: Abraham Spindel
 Refactor Date: 2020-7-23
-Last updated: 2020-7-23 
+Last updated: 2020-7-24 
 A component of Homework 1 */
 
 * {
@@ -92,21 +92,7 @@ p {
   background-color: #2589bd;
 }
 
-/* .benefit-lead {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-brand {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-cost {
-  margin-bottom: 32px;
-  color: #ffffff;
-} */
-
+/* condense 3 elements with identical properties being assigned */
 .benefit-lead,
 .benefit-brand,
 .benefit-cost {
@@ -114,20 +100,6 @@ p {
   color: #ffffff;
 }
 
-/* .benefit-lead h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-cost h3 {
-  margin-bottom: 10px;
-  text-align: center;
-} */
 .benefit-lead h3,
 .benefit-brand h3,
 .benefit-cost h3 {
@@ -135,23 +107,6 @@ p {
   text-align: center;
 }
 
-/* .benefit-lead img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-brand img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-cost img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-} */
 
 .benefit-lead img,
 .benefit-brand img,
@@ -160,33 +115,6 @@ p {
   margin: 10px auto;
   max-width: 150px;
 }
-
-/* #search-engine-optimization {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-#online-reputation-management {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-#social-media-marketing {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-} */
 
 #search-engine-optimization,
 #online-reputation-management,
@@ -199,38 +127,12 @@ p {
   color: #ffffff;
 }
 
-/* this is redundant */
-/* #search-engine-optimization img {
-    max-height: 200px;
-}
-
-#online-reputation-management img {
-    max-height: 200px;
-}
-
-#social-media-marketing img {
-    max-height: 200px;
-} */
 #search-engine-optimization img,
 #online-reputation-management img,
 #social-media-marketing img {
   max-height: 200px;
 }
 
-/* #search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-} */
 
 #search-engine-optimization h2,
 #online-reputation-management h2,
